Update ImageUtils.java
base64编码器 在jdk11找不到 
java.util.Base64 是在jdk1.8 中新加的